--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,9 @@
 /********** Template CSS **********/
 :root {
-    --primary: #86B817;
+    --primary: #0B1A39;
     --secondary: #FE8800;
     --light: #F5F5F5;
-    --dark: #14141F;
+    --dark: #0B1A39;
 }
 
 .fw-medium {
@@ -48,6 +48,7 @@
 .btn.btn-primary,
 .btn.btn-secondary {
     color: #FFFFFF;
+    /* color: #0B1A39; */
 }
 
 .btn-square {
@@ -84,6 +85,7 @@
     margin-right: 25px;
     padding: 35px 0;
     color: #FFFFFF !important;
+    /* color: #0B1A39 !important; */
     font-size: 18px;
     font-weight: 600;
     outline: none;
@@ -141,7 +143,7 @@
         border-bottom: 1px solid rgba(256, 256, 256, .1);
         z-index: 999;
     }
-    
+
     .sticky-top.navbar-light {
         position: fixed;
         background: #FFFFFF;
@@ -172,13 +174,15 @@
 
 /*** Hero Header ***/
 .hero-header {
-    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/bg-hero.jpg);
+    background: linear-gradient(rgba(20, 20, 31, .7), rgba(20, 20, 31, .7)), url(../img/umiya\ toursandtravel\ poster.jpeg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    height: 120vh;
+   
 }
 
-.breadcrumb-item + .breadcrumb-item::before {
+.breadcrumb-item+.breadcrumb-item::before {
     color: rgba(255, 255, 255, .5);
 }
 
@@ -325,6 +329,7 @@
 }
 
 @media (min-width: 768px) {
+
     .testimonial-carousel::before,
     .testimonial-carousel::after {
         width: 200px;
@@ -332,6 +337,7 @@
 }
 
 @media (min-width: 992px) {
+
     .testimonial-carousel::before,
     .testimonial-carousel::after {
         width: 300px;
